# markchini-cleaner

./: .gitignore  README.md
.github/workflows/: release.yml
scripts/: keygen.ps1
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  html_renderer.rs  lib.rs  main.rs
