[package]
name = "mark-chini-cleaner"
version = "1.0.0"
edition = "2021"
description = "Local-first Markdown-to-PDF converter with live preview"
authors = ["MarkChini"]
license = "MIT"

[lib]
name = "mark_chini_cleaner_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
pulldown-cmark = "0.13"
headless_chrome = "1"
